fix: footer social list wrapping

--- a/src/hugo/assets/sass/main.scss
+++ b/src/hugo/assets/sass/main.scss
@@ -473,6 +473,10 @@ ul.pager {
     padding-left: 0;
     list-style-type: none;
   }
+
+  .social-item {
+    white-space: nowrap;
+  }
 }
 
 .footer-heading {
